--- a/.github/workflows/contoso-traders-cloud-testing.yml
+++ b/.github/workflows/contoso-traders-cloud-testing.yml
@@ -657,7 +657,11 @@ jobs:
         run: npm ci
       - name: run playwright tests
         id: test
-        run: HOME=/root npx playwright test
+        env:
+          PLAYWRIGHT_SERVICE_ACCESS_TOKEN: ${{secrets.PLAYWRIGHT_SERVICE_ACCESS_TOKEN}}
+          PLAYWRIGHT_SERVICE_URL: ${{ secrets.PLAYWRIGHT_SERVICE_URL }}
+          PLAYWRIGHT_SERVICE_RUN_ID: ${{ github.run_id }}-${{ github.run_attempt }}-${{ github.sha }}
+        run: HOME=/root npx playwright test --config=playwright.service.config.ts --workers=30
       - name: upload playwright report
         uses: actions/upload-artifact@v3
         if: always()
